--- a/scss/note/_layout.scss
+++ b/scss/note/_layout.scss
@@ -6,6 +6,7 @@
 }
 
 .note-container {
+  display: block;
   position: absolute;
   top: 0;
   background: white;
